# marty_dasm

./: Cargo.toml  LICENSE  README.md
crates/marty_dasm/: Cargo.toml
crates/marty_dasm/src/: byte_reader.rs  cpu_common.rs  decoder.rs  error.rs  instruction.rs  lib.rs  mnemonic.rs  modrm16.rs  modrm32.rs  opcode.rs  prelude.rs  sib.rs
crates/marty_dasm/src/VX0/: decode.rs  mod.rs
crates/marty_dasm/src/formatter/: mod.rs  nasm_formatter.rs  tokens.rs
crates/marty_dasm/src/i80286/: mod.rs
crates/marty_dasm/src/i80386/: decode.rs  gdr.rs  mod.rs
crates/marty_dasm/src/i808X/: decode.rs  gdr.rs  mod.rs
crates/marty_dasm/tests/: colored_test.rs  format.rs  vs_iced_386.rs
crates/marty_dasm/tests/common/: format.rs  mnemonic_filter.rs  mod.rs
crates/marty_fuzzer/: Cargo.toml  README.md
crates/marty_fuzzer/src/: db.rs  error.rs  fuzzer.rs  lib.rs  modrm.rs  modrm_fuzzer.rs  types.rs
crates/marty_isadb/: Cargo.toml
crates/marty_isadb/src/: db.rs  error.rs  lib.rs  record.rs
isa_db/: 80386.csv
