[workspace]
members = [
    "crates/marty_dasm",
    "crates/marty_fuzzer"
]

resolver = "2"
default-members = ["crates/marty_dasm"]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Daniel Balsom"]
license = "MIT"
repository = "https://github.com/dbalsom/marty_dasm"

[workspace.dependencies]
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
thiserror = "2.0"