[package]
name = "marty_fuzzer"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
marty_dasm = { path = "../marty_dasm" }
marty_isadb = { path = "../marty_isadb" }
rand = "0.9"
rand_distr = "0.5"
log = "0.4"
env_logger = "0.11"
thiserror.workspace = true